--- a/download_resources.ipynb
+++ b/download_resources.ipynb
@@ -24,44 +24,65 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "60069cf4f41642bb9286163126d8638a",
+       "model_id": "93737461d67446cab82ab0b4feec7ffc",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0.00/87.9M [00:00<?, ?B/s]"
+       "HBox(children=(IntProgress(value=0, max=87910968), HTML(value='')))"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bfa33df791174d41a4df7c3517fe00e5",
+       "model_id": "f10bb2cab94d4e0b8a4795c96c077f5a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0.00/170M [00:00<?, ?B/s]"
+       "HBox(children=(IntProgress(value=0, max=170498071), HTML(value='')))"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b4b6e3198cef4021b576452bea5015ef",
+       "model_id": "fc58dfd608224ec4a8375dc345f962a9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0.00/212 [00:00<?, ?B/s]"
+       "HBox(children=(IntProgress(value=0, max=11490434), HTML(value='')))"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -83,30 +104,44 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7b3dd7a3a7ab4057a51e74acd980fc8d",
+       "model_id": "fb716da5d2ab4431ad6e675b7b999723",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0.00/212 [00:00<?, ?B/s]"
+       "HBox(children=(IntProgress(value=0, max=344862509), HTML(value='')))"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2ca2b3825f3d47efb6714bf976ecc012",
+       "model_id": "8aab979d863b47c3848e89d60131faaf",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0.00/212 [00:00<?, ?B/s]"
+       "HBox(children=(IntProgress(value=0, max=502), HTML(value='')))"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -128,44 +163,65 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a8864db135db432f92bad91c1e28bb3a",
+       "model_id": "bc347b94dfe24fb68b12647a5121fd46",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0.00/109M [00:00<?, ?B/s]"
+       "HBox(children=(IntProgress(value=0, max=108761145), HTML(value='')))"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "18a0028d2a5e4cf1999ac8a00288337c",
+       "model_id": "b0af4fb635544fd4afbe30819009c6ee",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0.00/181M [00:00<?, ?B/s]"
+       "HBox(children=(IntProgress(value=0, max=180566744), HTML(value='')))"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "886bd6c0304b4793b284ce1d3e281efc",
+       "model_id": "4b19060fbbb64a38ac174780da85480c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0.00/14.9M [00:00<?, ?B/s]"
+       "HBox(children=(IntProgress(value=0, max=14879205), HTML(value='')))"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -187,100 +243,149 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b4b82c2a1b244971bdbbb49b4218b1f5",
+       "model_id": "7a2dd3aa6d1a447fbfbecdfdea9922a6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0.00/19.7M [00:00<?, ?B/s]"
+       "HBox(children=(IntProgress(value=0, max=19673183), HTML(value='')))"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d12ead4b16aa4f80b9aae14fe2d594d6",
+       "model_id": "bd3ab336e86f499c978cd7a564f1e030",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0.00/133M [00:00<?, ?B/s]"
+       "HBox(children=(IntProgress(value=0, max=133031907), HTML(value='')))"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "502615d8c94040a5bd16b0a361b6f8dd",
+       "model_id": "24854923017e4daab055c4aa79fe8663",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0.00/678M [00:00<?, ?B/s]"
+       "HBox(children=(IntProgress(value=0, max=678158500), HTML(value='')))"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3fdb7a41e0c64d39b0f95108fe6bd9e8",
+       "model_id": "0ce2174e7b0641c8af9245b23fad06aa",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0.00/2.82M [00:00<?, ?B/s]"
+       "HBox(children=(IntProgress(value=0, max=2815180), HTML(value='')))"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c5948d8123c746c7a888d2e3369c0deb",
+       "model_id": "286e6a2bf52542bbbcd5b862d9288e94",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0.00/66.0M [00:00<?, ?B/s]"
+       "HBox(children=(IntProgress(value=0, max=66016063), HTML(value='')))"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3aed8896027c432b96240b8f52ab023a",
+       "model_id": "fcbe0d6013de413d8697c03ab56179e6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0.00/332M [00:00<?, ?B/s]"
+       "HBox(children=(IntProgress(value=0, max=331808930), HTML(value='')))"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ac9516c7c02e4e509e44f97bd0fc44e7",
+       "model_id": "687417b9c7ad44b68eb05faa11e142f0",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0.00/1.30M [00:00<?, ?B/s]"
+       "HBox(children=(IntProgress(value=0, max=1296395), HTML(value='')))"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -304,7 +409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.5.6"
   }
  },
  "nbformat": 4,
